unpackaged/main/default/objects/SBQQ__PriceAction__c/SBQQ__PriceAction__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__PriceActionHelp</customHelpPage>
    <description>Action that takes place when the parent price rule fires.</description>
    <label>Price Action</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>