unpackaged/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Field__c</fullName>
    <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Discount (%)</fullName>
            </value>
            <value>
                <fullName>Discount (Amt)</fullName>
            </value>
            <value>
                <fullName>Markup (%)</fullName>
            </value>
            <value>
                <fullName>Markup (Amt)</fullName>
            </value>
            <value>
                <fullName>SBQQ__ListPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__NetPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Description__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__UnitCost__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__PricingMethod__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__SubscriptionPricing__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__CostEditable__c</fullName>
            </value>
            <value>
                <fullName>Transaction_Type_Text__c</fullName>
            </value>
            <value>
                <fullName>Subscription_Term_Quote__c</fullName>
            </value>
            <value>
                <fullName>Trans_Category__c</fullName>
            </value>
            <value>
                <fullName>Product_Type__c</fullName>
            </value>
            <value>
                <fullName>Monthly_Amount_Calc__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__NonDiscountable__c</fullName>
            </value>
            <value>
                <fullName>Daily_Rate__c</fullName>
            </value>
            <value>
                <fullName>CPQ_Last_Rule__c</fullName>
            </value>
            <value>
                <fullName>Replacement_Value_Calc__c</fullName>
            </value>
            <value>
                <fullName>Price_Lookup_Check__c</fullName>
            </value>
            <value>
                <fullName>Unit_Text_Text__c</fullName>
            </value>
            <value>
                <fullName>Effective_Net_Total_Currency__c</fullName>
            </value>
            <value>
                <fullName>Cost_Type__c</fullName>
            </value>
            <value>
                <fullName>CAPEX_Total__c</fullName>
            </value>
            <value>
                <fullName>CAPEX_New_Build_Total__c</fullName>
            </value>
            <value>
                <fullName>CAPEX_Refurb_Total__c</fullName>
            </value>
            <value>
                <fullName>RM_Required_Amount__c</fullName>
            </value>
            <value>
                <fullName>Retrofit_Total__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>