unpackaged/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__SourceLookupField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SourceLookupField__c</fullName>
    <description>API Name of the field to return from the row matching the condition.</description>
    <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
    <label>Source Lookup Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__Value__c</fullName>
            </value>
            <value>
                <fullName>Monthly_Price__c</fullName>
            </value>
            <value>
                <fullName>Replacement_Value__c</fullName>
            </value>
            <value>
                <fullName>Cost__c</fullName>
            </value>
            <value>
                <fullName>NBV__c</fullName>
            </value>
            <value>
                <fullName>Insurance_Monthly__c</fullName>
            </value>
            <value>
                <fullName>Insurable_Value__c</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Negative_Insurable_Values__c</fullName>
            </value>
            <value>
                <fullName>External_Rental_Rate__c</fullName>
            </value>
            <value>
                <fullName>NS_Fee_Type_ID__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>