unpackaged/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Value__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Value__c</fullName>
    <description>The value that will be inserted into the Target Field when conditions are met.</description>
    <inlineHelpText>Enter the value you want inserted into the Target Field when conditions are met.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>