unpackaged/main/default/objects/SBQQ__PriceAction__c/validationRules/SBQQ__Event_Evaluation_Pricing_Guidance.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Event_Evaluation_Pricing_Guidance</fullName>
    <active>false</active>
    <description>Prevents users from creating Price Actions related to Pricing Guidance if the evaluation event is not After Calculate.</description>
    <errorConditionFormula>ISPICKVAL(SBQQ__TargetObject__c, 'Quote Line Pricing Guidance') &amp;&amp; (INCLUDES(SBQQ__Rule__r.SBQQ__EvaluationEvent__c, 'On Initialization') || INCLUDES(SBQQ__Rule__r.SBQQ__EvaluationEvent__c, 'Before Calculate') || INCLUDES(SBQQ__Rule__r.SBQQ__EvaluationEvent__c, 'On Calculate'))</errorConditionFormula>
    <errorDisplayField>SBQQ__TargetObject__c</errorDisplayField>
    <errorMessage>To use Quote Line Pricing Guidance as the Target Object, select After Calculate from the Calculator Evaluation Event dropdown list.</errorMessage>
</ValidationRule>