unpackaged/main/default/objects/SBQQ__PriceAction__c/validationRules/SBQQ__Target_Object_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Target_Object_Validation</fullName>
    <active>false</active>
    <description>Prevents users from creating Price Actions targeting an out-of-scope object.</description>
    <errorConditionFormula>(ISPICKVAL(SBQQ__TargetObject__c, 'Product Option') &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Product Option') || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Configurator'))) || ((ISPICKVAL(SBQQ__TargetObject__c, 'Quote') || ISPICKVAL(SBQQ__TargetObject__c, 'Quote Line') || ISPICKVAL(SBQQ__TargetObject__c, 'Quote Line Pricing Guidance')) &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Quote Line') || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, 'Calculator')))</errorConditionFormula>
    <errorDisplayField>SBQQ__TargetObject__c</errorDisplayField>
    <errorMessage>Price Action Target Object does not match Evaluation Scope</errorMessage>
</ValidationRule>